feat (logout) : add logout endpoint
